# backer-upper

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.json  settings.local.json
src/: backup.rs  config.rs  drives.rs  format.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  commands.rs  config.rs  drives.rs  format.rs  main.rs  state.rs
src/ui/: mod.rs  style.rs
ui/: app.js  app.ts  index.html  style.css
