[package]
name = "backer-upper"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
