[package]
name = "backer-upper"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
zbus = { version = "4", features = ["blocking"] }
